@@ -1,3 +1,11 @@
+2013-05-03  Krystian Baclawski  <krystian.baclawski@gmail.com>
+
+	* src/scripts/build_helper: Make compilation set proper exit code on
+	  failures, add debug parameter.
+	* configure, configure.ac: Add configure flag to enable debug build.
+	* src/boot/Makefile.in, src/interp/Makefile.in: Propagate debug
+	  settings from configure.
+
 2013-05-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/liouv.spad.pamphlet,
@@ -6,7 +14,6 @@
 	src/algebra/op.spad.pamphlet,
 	src/algebra/trigcat.spad.pamphlet,
 	src/algebra/expr.spad.pamphlet: Implement erfi.
-
 
 2013-05-01  Krystian Baclawski <krystian.baclawski@gmail.com>
 
